no longer has main content behind navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,15 +2,18 @@
 @import "../assets/stylesheets/variables";
 @import "../assets/stylesheets/custom";
 .navbar-header {
-    span{
-		color: $color-pf-white;
-		padding: $pad5 $pad10;
-		font-size: $font18;
-    }
+  span {
+    color: $color-pf-white;
+    padding: $pad5 $pad10;
+    font-size: $font18;
+  }
 }
-.footer{
-	text-align: $textCenter;
-	font-size: $font-size-small;
-	border-top: 1px solid $color-pf-blue-300;
-	margin-top: 2%;
+
+.app {
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+  .app {
+    padding-top: 0px;
+  }
 }
